2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkLinkButton.t: Test that URI hooks can disconnect themselves
	and modify the user data.  Patch by Kevin Ryde.

	* t/GtkIconView.t: Fix test failure on older gtk+.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Fix some test failures related to floating point number
	comparisons.

	* pm/TestHelper.pm: Add delta_ok() for comparing floating point
	numbers.

	* t/GdkInput.t
	* t/GtkProgressBar.t
	* t/GtkRange.t
	* t/GtkSpinButton.t
	* t/PangoMatrix.t: Use delta_ok().

	* t/GtkSimpleList.t: Simply don't use floating point numbers here.

2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkPixbuf.t: If saving a pixbuf in 'jpeg' format is not
	supported, try 'png'.  Patch by Flavio Poletti.  (RT #37135)

	* t/version-checks.t: Don't use the '-init' import switch since it
	might abort the test.  Use '-threads-init' instead, and properly
	quote it.

	* xs/GtkTreeDnd.xs: Use gdk_atom_intern instead of
	gdk_atom_intern_static_string; the latter is only available in
	gtk+ >= 2.10.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.192.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkLinkButton.t
	* xs/GtkLinkButton.xs: Wrap gtk_link_button_set_visited and
	gtk_link_button_get_visited.

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Fix the stack handling in the xsub for
	gtk_tree_model_get.  We need to call SPAGAIN before and PUTBACK
	after code that modifies the local stack pointer (PUSHs and XPUSHs
	for example).  Patch by Kevin Ryde.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Make Gtk2::Widget::hide_on_delete ignore excess
	arguments so that it is actually usable.  Patch by Kevin Ryde.

	* xs/GtkSelection.xs: gtk_selection_data_get_data was split up
	into gtk_selection_data_get_data and
	gtk_selection_data_get_length.  Update the wrappers accordingly.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>
